tests/dockerfile/graph_builder/checks/resources/EnvPythonHttpsVerify/fail/Dockerfile.run.quotes
FROM alpine:3.15

RUN PYTHONHTTPSVERIFY=0 TEST="lol\"" python example.py
RUN PYTHONHTTPSVERIFY="0" TEST='lol\'' python example.py

RUN LOL="123\"" PYTHONHTTPSVERIFY="0" python example.py
RUN LOL='123\'' PYTHONHTTPSVERIFY='0' python example.py
